3. jan 2013 Support for updating language pairs


28. dec 2012 Jacob Nordfalk - Release of version 0.98


22.-24 oct 2012 Jacob Nordfalk
Add missing e.printStackTrace()
Add files COPYING, AUTHORS, CHANGELOG
Add Application singleton
Add about screen
Add Bugsense library and key


TODO
link to Apertium,
info about the license have been fulfilled
Preselect languages - for example default phone language as target language and English as source language


