@@ -1,0 +1,8 @@
+*.iml
+.gradle
+.DS_Store
+/local.properties
+/.idea
+/build
+/captures
+.externalNativeBuild
