@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.apertium.android"
-          android:versionCode="102"
+          android:versionCode="1031"
           android:installLocation="auto"
-          android:versionName="1.02" >
+          android:versionName="1.03" >
 
   <uses-sdk android:minSdkVersion="7"
               android:targetSdkVersion="18" />
