@@ -20,7 +20,6 @@ package org.apertium.android;
 
 import android.util.Log;
 
-import com.bugsense.trace.BugSenseHandler;
 
 import dalvik.system.DexClassLoader;
 import java.io.BufferedOutputStream;
@@ -178,7 +177,7 @@ public class ApertiumInstallation {
 //        Log.d(TAG, "new DexClassLoader(" + basedir + ".jar");
     //return new DexClassLoader(getBasedirForPackage(pkg)+ ".jar", bytecodeCacheDir.getAbsolutePath(), null, this.getClass().getClassLoader());
     if (!bytecodeCacheDir.exists()) { // Fix for https://mint.splunk.com/dashboard/project/185c8f8c/errors/987908380
-      BugSenseHandler.sendException(new IOException("bytecodeCacheDir was removed: "+bytecodeCacheDir));
+      //BugSenseHandler.sendException(new IOException("bytecodeCacheDir was removed: "+bytecodeCacheDir));
       bytecodeCacheDir.mkdirs();
     }
     return new DexClassLoader(bytecodeDir+ "/" + pkg + ".jar", bytecodeCacheDir.getAbsolutePath(), null, this.getClass().getClassLoader());
