@@ -1,3 +1,6 @@
+9. may 2018 New URL for downloading language pairs - release 1.03
+
+
 3. jan 2013 Support for updating language pairs
 
 
